# galay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  count.sh  demo  demo.cc  init.py
cmake/: Option.cmake  (+3 more)
galay/: CMakeLists.txt  galay.cc  galay.h  galay.hpp  galay.inl
galay/algorithm/: Base64.cc  Base64.h  CMakeLists.txt  Md5.cc  Md5.h  MurmurHash3.cc  MurmurHash3.hpp  Salt.cc  Salt.h  Sha256.cc  Sha256.h  Sha512.cc  Sha512.h
galay/client/: client.cc  client.h
galay/common/: Base.h  BaseDefine.cc  BaseDefine.h  CMakeLists.txt  Error.cc  Error.h  Reflection.cc  Reflection.h  Reflection.inl  SignalHandler.cc  SignalHandler.h  awaiter.cc  awaiter.h  base.cc  base.h  coroutine.cc  coroutine.h  coroutine.inl  deleter.h  reflection.cc  reflection.h  reflection.inl  result.cc  result.h  signalhandler.cc  signalhandler.h  threadpool.cc  threadpool.h  waitgroup.cc  waitgroup.h
galay/config/: config.cc  config.h
galay/factory/: CMakeLists.txt  factory.cc  factory.h
galay/helper/: CMakeLists.txt  HttpHelper.cc  HttpHelper.h  httphelper.cc  httphelper.h
galay/kernel/: Async.cc  Async.h  Async.hpp  Async.tcc  Awaiter.cc  Awaiter.h  Base.h  CMakeLists.txt  Client.hpp  Client.tcc  Connection.cc  Connection.h  Connection.hpp  Coroutine.cc  Coroutine.h  Coroutine.hpp  Coroutine.tcc  Event.cc  Event.h  Event.hpp  Event.tcc  EventEngine.cc  EventEngine.h  ExternApi.cc  ExternApi.h  ExternApi.hpp  ExternApi.tcc  Internal.cc  Internal.h  Internal.hpp  Internal.tcc  Log.cc  Log.h  Operation.cc  Operation.h  Scheduler.cc  Scheduler.h  Server.cc  Server.h  Server.hpp  (+61 more)
galay/middleware/: AsyncEtcd.cc  AsyncEtcd.h  CMakeLists.txt  Etcd.cc  Etcd.h  Etcd.hpp  Etcd.tcc  Kafka.cc  Kafka.h  Mysql.cc  Mysql.h  Mysql.hpp  Mysql.tcc  Redis.cc  Redis.h  Redis.hpp  Redis.tcc  SyncMySql.cc  SyncMySql.h  etcd.cc  etcd.h  kafka.cc  kafka.h  mysql.cc  mysql.h
galay/middleware/etcd/: Etcd.cc  Etcd.hpp  Etcd.tcc
galay/middleware/mysql/: Mysql.cc  Mysql.hpp  Mysql.tcc
galay/middleware/redis/: Redis.cc  Redis.hpp  Redis.tcc
galay/protocol/: CMakeLists.txt  Dns.cc  Dns.h  Http.cc  Http.h  Http.hpp  Http.tcc  Http2Hpack.hpp  Http2HpackHuffman.hpp  Http2HpackStaticTable.hpp  Http2_0.cc  Http2_0.h  Http2_0.hpp  Http2_0.tcc  Protocol.cc  Protocol.h  Raft.cc  Raft.h  Smtp.cc  Smtp.h  basic_protocol.h  dns.cc  dns.h  http.cc  http.h  http1_1.cc  http1_1.h  http2_0.h  mkhttp2huffman.py  mkhttp2statictable.py  protocol.cc  protocol.h  smtp.cc  smtp.h  tcp.cc  tcp.h  websocket.h
galay/protocol/dns/: Dns.cc  Dns.h
galay/protocol/http/: Http.cc  Http.hpp  HttpClient.hpp  HttpClient.tcc  HttpCommon.cc  HttpCommon.hpp  HttpFormData.cc  HttpFormData.hpp  HttpHelper.cc  HttpHelper.hpp  HttpHelper.tcc  HttpMiddleware.cc  HttpMiddleware.hpp  HttpProtoc.cc  HttpProtoc.hpp  HttpRoute.cc  HttpRoute.hpp  HttpServer.cc  HttpServer.hpp  HttpServer.tcc
galay/protocol/http2/: Http2Hpack.cc  Http2Hpack.hpp  Http2HpackHuffman.hpp  Http2_0.tcc
galay/protocol/raft/: LogEntry.cc  LogEntry.hpp
galay/security/: Base64.cc  Base64.h  CMakeLists.txt  Md5.cc  Md5.h  Salt.cc  Salt.h  Sha256.cc  Sha256.h  Sha512.cc  Sha512.h  base64.cc  base64.h  md5.cc  md5.h  salt.cc  salt.h  sha256.cc  sha256.h  sha512.cc  sha512.h
galay/server/: CMakeLists.txt  server.cc  server.h
galay/service/: CMakeLists.txt  RpcClient.hpp  RpcServer.cc  RpcServer.hpp  RpcThread.cc  RpcThread.hpp  Service.cc  Service.hpp
galay/util/: CMakeLists.txt  Io.cc  Io.h  ObjectPool.hpp  Parser.cc  Parser.h  Random.cc  Random.h  RateLimiter.cc  RateLimiter.h  String.cc  String.h  StringTools.cc  StringTools.h  Thread.cc  Thread.h  ThreadSecurity.hpp  ThreadSefe.hpp  Time.cc  Time.h  Tree.cc  Tree.h  TypeName.h  conf_parser.cc  conf_parser.h  countsemaphore.cc  countsemaphore.h  file.cc  file.h  fileiofunction.cc  fileiofunction.h  io.cc  io.h  md5.cc  netiofunction.cc  netiofunction.h  parser.cc  parser.h  random.cc  random.h  (+17 more)
galay/utils/: App.cc  App.hpp  ArgsParse.cc  ArgsParse.hpp  ArgsParse.tcc  CMakeLists.txt  CricuitBreaker.hpp  Distributed.cc  Distributed.hpp  Huffman.hpp  Io.cc  Io.h  Mvcc.cc  Mvcc.h  Mvcc.hpp  Mvcc.tcc  ObjectPool.hpp  Parser.cc  Parser.h  Pool.hpp  Pool.tcc  Random.cc  Random.h  RateLimiter.cc  RateLimiter.h  String.cc  String.h  System.cc  System.h  Thread.cc  Thread.h  TypeName.h
rpc_test/: CMakeLists.txt  hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h  hello.proto  test_grpc_client.cc  test_grpc_server.cc
test/: CMakeLists.txt  homework.cc  test.cc  test_conf_parser.cc  test_consistenthash.cc  test_dns_client.cc  test_event.cc  test_http.cc  test_http2.cc  test_http_client.cc  test_http_server.cc  test_httpformparser.cc  test_https_client.cc  test_https_server.cc  test_mvcc.cc  test_reflection.cc  test_self_define_protocol_client.cc  test_self_define_protocol_server.cc  test_signal.cc  test_smtp_client.cc  test_tcp_client.cc  test_tcp_self_protocol_client.cc  test_tcp_self_protocol_server.cc  test_tcp_server.cc  test_tcp_ssl_client.cc  test_tcp_ssl_server.cc  test_threadpool.cc  test_timer.cc  test_trie.cc  test_wait_group.cc
test/client/: CMakeLists.txt
test/server/: CMakeLists.txt  test_tcp_server.cc
tutorial/: CMakeLists.txt  demo  demo.cc  test_cmd_parser.cc  test_conf_parse.cc  test_dns_client.cc  test_etcd_discover.cc  test_etcd_register.cc  test_fileio.cc  test_http_client.cc  test_http_server.cc  test_https_client.cc  test_https_server.cc  test_msyql_client.cc  test_smtp_client.cc  test_tcp_self_protocol_client.cc  test_tcp_self_protocol_server.cc  test_threadpool.cc  test_time.cc  test_timer.cc  test_udp.cc  test_waitgroup.cc  tutorial_client.cc  tutorial_cmd_parser.cc  tutorial_conf_parser.cc  tutorial_cricuitbreaker.cc  tutorial_dns_client.cc  tutorial_echo_server.cc  tutorial_etcd_discover_client.cc  tutorial_etcd_register_client.cc  tutorial_http_client.cc  tutorial_https_server.cc  tutorial_mysql_client.cc  tutorial_proxy_server.cc  tutorial_ratelimiter.cc  tutorial_redis_client.cc  tutorial_smtp_client.cc  tutorial_smtp_proxy_server.cc  tutorial_ssl_echo_server.cc  tutorial_static_server.cc
(+96 files in other folders)
